deployment/Deployment-PersonApi.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: person-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: person-api
    spec:
      containers:
        - name: person-api
          image: fredericci/person-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
