deployment/Service-PersonApi.yml
apiVersion: v1
kind: Service
metadata:
  name: person-api-service
  labels:
    app: person-api-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: person-api
