deployment/Ingress-Person-Api.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: person-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: person-api-service
              servicePort: 8080
